# mecanum

./: .bash_history  .bashrc  .gitignore  .last_build  Dockerfile  compose.yaml  docker-compose.yaml  log.txt  start_ros2_container.sh  stop_ros2_container.sh
.config/ros.org/: rqt_gui.ini
.devcontainer/: .onCreateCommandMarker  .postCreateCommandMarker  .updateContentCommandMarker  Dockerfile  devcontainer.json  init-cmakelists.sh
.devcontainer/test/: test.urdf.xacro  test_xacro.launch.py
.local/share/CMakeTools/: log.txt
.local/share/gk/: repoMapping.json
config/: correction_rettilineo.yaml  xxxxcorrection.yaml
rpi4/: Dockerfile  docker-compose.yaml  start_ros2_container.sh  stop_ros2_container.sh  sync_to_rpi.sh
rpi5/: .bash_history  .last_build  Dockerfile  Installazione Pi5 OS.md  __Su PC lancia script in dir superiore.txt  compose.yaml  docker-compose.yaml  start_ros2_container.sh  stop_ros2_container.sh  sync_to_rpi.sh
rpi5/Info/: AlimentazioneVia18AWG.md  Se serve Desktop in rpi5.md  UBEC Feichao.md  test_power.sh
src/Archive/: readme.txt
src/Archive/serial_json_node/: CMakeLists copy.txt  CMakeLists.txt  package copy.xml  package.xml
src/Archive/serial_json_node/config/: sensors_params.yaml  xsensors_params copy.yamlxx
src/Archive/serial_json_node/include/serial_json_node/: serial_json_node.hpp
src/Archive/serial_json_node/install/: local_setup.sh  setup.sh
src/Archive/serial_json_node/install/serial_json_node/share/serial_json_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/Archive/serial_json_node/launch/: serial_json.launch.py
src/Archive/serial_json_node/log/: latest_build
src/Archive/serial_json_node/src/: main.cpp  serial_json_node copy.cpp  serial_json_node.cpp
src/Archive/serial_json_node/test/: main_pico_uart_test.py
src/Archive/serial_sensor_bridge/: UART_communication.py  package.xml  setup.cfg  setup.py
src/Archive/serial_sensor_bridge/config/: sensors_params.yaml
src/Archive/serial_sensor_bridge/launch/: serial_sensor_launch.py
src/Archive/serial_sensor_bridge/serial_sensor_bridge/: __init__.py  serial_sensor_node.py
src/Archive/serial_sensor_cpp/: CMakeLists.txt  Makefile  package.xml
src/Archive/serial_sensor_cpp/src/: serial_sensor_node.cpp
src/mecanum_base/: CMakeLists copy.txt  CMakeLists.txt  README.md  README_creare_mappe.md  README_nav2.md  TODO.md  estop_state_broadcaster_plugin.xml  mecanum_hardware_plugin.xml  package copy.xml  package.xml  system_state_broadcaster_plugin.xml
src/mecanum_base/bt_xml/: navigate.xml
src/mecanum_base/config/: README_nav2_params_documentation.md.md  controllers.yaml  ekf copy.yaml  ekf.yaml  ekf_reference.yaml  info_on_nav2_parameters.html  info_on_nav2_parameters.txt  nav2_default_parameter_reference.yaml  nav2_params.yaml  nav2_params_orig con modifiche.yaml  robot_params.yaml  slam_toolbox.yaml   slam_toolbox_continue.yaml
src/mecanum_base/include/mecanum_base/: estop_state_broadcaster.hpp
src/mecanum_base/include/mecanum_hardware/: mecanum_system.hpp
src/mecanum_base/launch/: README.md  README_nodi-topic.txt  bringup.launch copy.py  bringup.launch.py  bringup_navigation.launch.py  mecanum_control_only.launch.py  slam_continue_mapping.launch.py  slam_launch.py  slam_mapping.launch.py
src/mecanum_base/maps/: mappa_genereato_automaticamente.yaml
src/mecanum_base/msg/: SystemState.msg
src/mecanum_base/rviz/: mecanum.rviz
src/mecanum_base/src/: calibration_node copy.cpp  calibration_node.cpp  deadline.cpp  emergency_stop_service_node.cpp  estop_manager_node.cpp  estop_service_node.cpp  estop_state_broadcaster.cpp  mecanum_calibration_node.cpp  mecanum_cmd_node copy 2.cpp  mecanum_cmd_node.cpp  mecanum_odom_node.cpp  mecanum_system copy.cpp  mecanum_system.cpp  my_nav_client.cpp  rosout_relay_node.cpp  system_state_broadcaster.cpp  tmp.cpp
src/mecanum_base/srv/: CalibrationInput.srv
src/mecanum_base/tests/: log.txt  mecanum_test_log.csv  test_mecanum copy.sh  test_mecanum.sh  test_mecanum_con_sonar.sh  test_ruote_servos_sonar.sh  wheel_monitor.py
src/mecanum_base/urdf/: mecanum_robot.xacro
src/mecanum_base/web/: calibration_interface.html  index _completo_originale.html  index old.html  index.html  lanciaScript.html
src/mecanum_base/web/ccs/: style.css
src/mecanum_base/web/css/: style.css
src/mecanum_base/web/scripts/: script1.py  script2.py  script3.py  start_mecanum.sh
src/mecanum_base/webserver/: server.js
src/sllidar_ros2/launch/: sllidar_a1_launch.py  view_sllidar_a1_launch.py
