<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>serial_sensor_bridge</name>
  <version>0.1.0</version>
  <description>
    Reads JSON sensor data over UART, resets port on hang, publishes diagnostics, aligned timestamps, and individual sonar ranges.
  </description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <exec_depend>python-serial</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
